force-app/main/default/objects/Payroll_Payslip__c/Payroll_Payslip__c.object-meta.xml
<CustomObject>
    <label>Payroll / Payslip</label>
    <nameField>
        <displayFormat>PP{0000}</displayFormat>
        <label>Payroll / Payslip</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payrolls / Payslips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>