force-app/main/default/objects/Payroll_Payslip__c/fields/Allowances__c.field-meta.xml
<CustomField>
    <fullName>Allowances__c</fullName>
    <label>Allowances</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>