force-app/main/default/objects/Payroll_Payslip__c/fields/Basic_Pay__c.field-meta.xml
<CustomField>
    <fullName>Basic_Pay__c</fullName>
    <label>Basic Pay</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>