force-app/main/default/objects/Payroll_Payslip__c/fields/Overtime_Pay__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Pay__c</fullName>
    <label>Overtime Pay</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>