force-app/main/default/objects/Payroll_Payslip__c/fields/PagIbig__c.field-meta.xml
<CustomField>
    <fullName>PagIbig__c</fullName>
    <label>PagIbig</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>