force-app/main/default/objects/Payroll_Payslip__c/fields/Payroll_Period__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payroll Period</label>
    <referenceTo>Payroll_Period__c</referenceTo>
    <relationshipLabel>Payrolls / Payslips</relationshipLabel>
    <relationshipName>Payrolls_Payslips</relationshipName>
    <type>Lookup</type>
</CustomField>