force-app/main/default/objects/Payroll_Payslip__c/fields/PhilHealth__c.field-meta.xml
<CustomField>
    <fullName>PhilHealth__c</fullName>
    <label>PhilHealth</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>