force-app/main/default/objects/Payroll_Payslip__c/fields/SSS__c.field-meta.xml
<CustomField>
    <fullName>SSS__c</fullName>
    <label>SSS</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>